# aws-map

./: .dockerignore  .gitignore  ASK_EXAMPLES.md  Dockerfile  LICENSE  README.md  ROADMAP.md  SERVICES.md  pyproject.toml
examples/queries/: count-per-region.sql  count-per-service.sql  lambda-runtimes.sql  list-ec2-instances.sql  resources-with-owner-tag.sql  scan-history.sql  total-resources.sql
src/aws_inventory/: __init__.py  auth.py  cli.py  collector.py  completions.py  config.py  db.py  examples.py  formatter.py  nlq.py  queries_lib.py
src/aws_inventory/collectors/: __init__.py  accessanalyzer.py  acm.py  acm_pca.py  amp.py  amplify.py  apigateway.py  apigatewayv2.py  appconfig.py  appflow.py  applicationautoscaling.py  apprunner.py  appsync.py  athena.py  auditmanager.py  autoscaling.py  backup.py  batch.py  bedrock.py  budgets.py  ce.py  cleanrooms.py  cloudformation.py  cloudfront.py  cloudhsmv2.py  cloudtrail.py  cloudwatch.py  codeartifact.py  codebuild.py  codedeploy.py  codepipeline.py  cognito.py  comprehend.py  computeoptimizer.py  config.py  connect.py  datasync.py  dax.py  detective.py  devicefarm.py  (+109 more)
src/aws_inventory/queries/: admin-roles.sql  admin-users.sql  cross-account-roles.sql  default-vpcs.sql  ebs-unencrypted.sql  encryption-status.sql  iam-inactive-users.sql  lambda-high-memory.sql  lambda-runtimes.sql  missing-tag.sql  old-access-keys.sql  open-security-groups.sql  public-s3-buckets.sql  rds-engines.sql  rds-no-multi-az.sql  rds-public.sql  rds-unencrypted.sql  resources-by-account.sql  resources-by-region.sql  resources-by-service.sql  resources-by-tag.sql  resources-per-account-service.sql  s3-no-logging.sql  s3-no-versioning.sql  secrets-no-rotation.sql  stopped-instances.sql  untagged-resources.sql  unused-eips.sql  unused-volumes.sql  users-without-mfa.sql
