[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "awsmap"
version = "1.0.0"
description = "A fast, comprehensive tool for mapping and inventorying AWS resources across 140+ services and all regions"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["aws", "inventory", "cloud", "infrastructure", "devops", "boto3", "aws-resources", "multi-region"]
authors = [
    {name = "Tarek CHEIKH", email = "tarek@tocconsulting.fr"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
dependencies = [
    "boto3>=1.26.0",
    "click>=8.0.0",
    "pyyaml>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/TocConsulting/awsmap"
Repository = "https://github.com/TocConsulting/awsmap"
Issues = "https://github.com/TocConsulting/awsmap/issues"
Documentation = "https://github.com/TocConsulting/awsmap#readme"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "moto[ec2,s3,iam,lambda,dynamodb]>=4.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
awsmap = "aws_inventory.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"